--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
- header{
+body {
+    font-family: 'Montserrat', sans-serif;
+} 
+
+header{
      background: #bbbbbb;
      padding: 20px 0;
  }
@@ -190,4 +194,18 @@ td, th {
 
 .imagembeneficios {
     width: 60%;
+}
+
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.video {
+    width: 560px;
+    margin: 1em auto;
 }
