--- a/style.css
+++ b/style.css
@@ -103,8 +103,6 @@ footer {
 }
 
 main {
-    width: 940px;
-    margin: 0 auto;
 
 }
 
@@ -174,6 +172,13 @@ td, th {
     clear: left;
 }
 
+.principal {
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p {
     margin: 0 0 1em;
 }
@@ -192,12 +197,14 @@ td, th {
     margin: 0 20px 20px 0;
 }
 
-.imagembeneficios {
-    width: 60%;
-}
-
 .mapa {
     padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
 }
 
 .mapa p {
@@ -205,7 +212,39 @@ td, th {
     text-align: center;
 }
 
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+} 
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:before {
+    content: "🟊";
+}
+
+.itens:nth-child(2n) {
+    font-weight: bold;
+}
+
+.imagem-beneficios {
+    width: 60%;
+}
+
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
 }
