--- a/style.css
+++ b/style.css
@@ -252,3 +252,27 @@ td, th {
     width: 560px;
     margin: 2em auto;
 }
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+    
+    nav {
+        position: static;
+    }
+
+    .mapa, .beneficios, .video {
+        padding: 15px;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+        margin: 10px 0 0 0;
+    }
+
+}
